# M-Coder

./: .dockerignore  .gitignore  Dockerfile  README.md  decode_saq.py  docker-compose.yml  pyproject.toml
deploy/: LXC.md  env.example  m-coder.service.template  nginx.conf.example  saq-decoder.service
saq_decoder/: __init__.py  audio_analysis.py  autocorrect.py  cli.py  config.py  core.py  gerke.py  models.py  morse.py  presets.py  python_decoder.py  transmit.py
saq_decoder/web/: __init__.py  app.py  asset_version.py  decode_handler.py
saq_decoder/web/static/: index.html
saq_decoder/web/static/css/: app.css
saq_decoder/web/static/js/: audio-analysis.js  common.js  cw-transmitter.js  file-decode.js  live-decode.js  presets.js  transmit.js  waveform.js
scripts/: docker-up.sh  install.sh  start.sh  update.sh
