[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saq-morse-decoder"
version = "0.1.0"
description = "Offline CLI and online web service to decode SAQ VLF Morse recordings"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "Chris" }]
keywords = ["saq", "morse", "vlf", "grimeton", "cw", "decoder"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Ham Radio",
]

dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["httpx>=0.27", "pytest>=8.0"]

[project.scripts]
saq-decode = "saq_decoder.cli:main"
saq-serve = "saq_decoder.web.app:main"

[project.urls]
Homepage = "https://github.com/chrishaef/M-Coder"
Source = "https://github.com/chrishaef/M-Coder"

[tool.setuptools.packages.find]
where = ["."]
include = ["saq_decoder*"]

[tool.setuptools.package-data]
saq_decoder = ["web/static/**/*"]
